variables.RunFour.scala.error
Compilation error:
RunFour:3: error: not found: value bagglesStepdOn
while (bagglesStepdOn < 3) {
       ^