variables.RunFour.scala.code
var bagglesStepedOn:Int = 0;

while (bagglesStepdOn < 3) {
  forward();
  if (isOverBaggle()) bagglesStepedOn += 1;
}

